--- a/public/styles.css
+++ b/public/styles.css
@@ -16,7 +16,11 @@ background-color: aquamarine;
 }
 
 li {
+
     list-style-type: none;
     text-transform: uppercase;
+    
+    position: relative;
+    display: inline-block;
 
 }
