--- a/public/styles.css
+++ b/public/styles.css
@@ -9,17 +9,20 @@ background-color: aquamarine;
     align-items: center;
 }
 
-.Userinput{
+.search{
     height: 35px;
     width: 300px;
     font-size: 16px;
 }
 li {
     list-style-type: none;
+    margin: 0 0 10px 0;
+    
 }
 
 .name{
     background-color: lightpink;
+    background-size: 20px;
 }
 .suggestion{
     display: flex;
