--- a/public/styles.css
+++ b/public/styles.css
@@ -23,4 +23,6 @@ li {
 
     list-style-type: none;
     text-transform: uppercase;
+    background-image: linear-gradient(to bottom right, red, yellow);
+      
 }
