--- a/public/styles.css
+++ b/public/styles.css
@@ -26,7 +26,7 @@ li {
 }
 
 .name{
-    background-color: lightpink;
+    /*background-color: lightpink;*/
     background-size: 20px;
 
     background-image: linear-gradient(to bottom right, lightpink, yellow);
