--- a/public/styles.css
+++ b/public/styles.css
@@ -18,6 +18,10 @@ font-family: 'Open Sans', sans-serif
     font-size: 16px;
 
 }
+
+ul{
+    background-image: linear-gradient(to bottom right, lightpink, yellow);
+}
 li {
 
     list-style-type: none;
