--- a/public/styles.css
+++ b/public/styles.css
@@ -34,7 +34,7 @@ li {
 }
 
 .name{
-    background-color: lightpink;
+    /*background-color: lightpink;*/
     background-size: 20px;
 }
 .suggestion{
