--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,8 @@
 
 body{
 background-color: aquamarine;
-font-family: 'Open Sans', sans-serif
+font-family: 'Open Sans', sans-serif;
+
 }
 
 .container{
@@ -10,17 +11,18 @@ font-family: 'Open Sans', sans-serif
     justify-content: center;
     flex-direction: column;
     align-items: center;
+   
 }
 
 .search{
     height: 35px;
     width: 300px;
     font-size: 16px;
-
+    
 }
 
 ul{
-    background-image: linear-gradient(to bottom right, lightpink, yellow);
+    
     margin: 10px;
 }
 
@@ -40,14 +42,14 @@ li {
     background-size: 20px;
 }
 .suggestion{
-    display: flex;
+    display: flex;  
     flex-wrap: wrap;
     text-transform: uppercase;
     width: 450px;
     margin: 100px auto 0;
     padding:10px ; 
     box-sizing: border-box;
-}
+   }
 ul li {
     display: flex;
     padding: 10px 20px;
@@ -55,6 +57,7 @@ ul li {
     margin:5px 0 ;
     transition: .5s;
     flex-direction: column;
+    background-image: linear-gradient(to bottom right, lightpink, yellow);
     
     /*background-color: lightpink;*/
     
