--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,7 @@
 @font-face {font-family: 'Open Sans', sans-serif;src: url( "https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");}
 
 body{
-background-color: aquamarine;
+background-color: rgb(127, 150, 255);
 font-family: 'Open Sans', sans-serif;
 
 }
@@ -57,7 +57,7 @@ ul li {
     margin:5px 0 ;
     transition: .5s;
     flex-direction: column;
-    background-image: linear-gradient(to bottom right, lightpink, yellow);
+    background-image: linear-gradient(to bottom right, lightpink, rgb(185, 116, 241));
     
     /*background-color: lightpink;*/
     
